--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,47 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+
+/* custom overrides */
+
+.field {
+  @layer .border .py-2 .px-3 .text-grey-darkest;
+}
+
+.field-label {
+  @layer .uppercase .font-bold .text-lg .text-grey-darkest .mb-2;
+}
+
+.field-group {
+  @layer .flex .flex-col;
+}
+
+.btn {
+  @layer .block .text-white .uppercase .text-lg .p-4 .rounded;
+}
+
+.btn-teal {
+  @layer .bg-teal;
+}
+
+.btn-teal:hover {
+  @layer .bg-teal-dark;
+}
+
+.link {
+  @layer .block .no-underline .text-sm;
+}
+
+.link-grey {
+  @layer .text-grey-dark;
+}
+
+.link-grey:hover {
+  @layer .text-grey-darker;
+}
+
+@tailwind utilities;
+
+/* Here we can add our own utilities or custom CSS */
